[package]
name = "pixelflood-rs"
version = "0.1.0"
authors = ["Aurora <tomek-kubel2@wp.pl>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
minifb = "0.15.1"
tokio = { version = "0.2", features = ["blocking", "io-util", "macros", "rt-threaded", "stream", "sync", "tcp", "time"] }
tokio-util = { version = "0.2.0", features = ["codec"] }
bytes = "0.5.3"
futures = "0.3.1"
thiserror = "1.0.9"